--- a/02TrabajoClase01/app/src/main/res/values/strings.xml
+++ b/02TrabajoClase01/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">02-TrabajoClase01</string>
+    <string name="app_name" translatable="false">02-TrabajoClase01</string>
     <string name="mensaje"></string>
 </resources>
