--- a/01-Android/app/src/main/res/values/strings.xml
+++ b/01-Android/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">gr2sw2024b_eacg</string>
     <string name="saludo">Hello Friends</string>
     <color name="saludo_color">#AF192F</color>
+    <string-array name="string_array_opciones_dialogo">
+        <item>Lunes</item>
+        <item>Martes</item>
+        <item>Miércoles</item>
+    </string-array>
 </resources>
